# Siwu-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  build_exe.bat  config.toml.example  docker-compose.yml  electron-builder.yml  package-lock.json  package.json  pyproject.toml  runtime_hook.py  siwu.spec
electron/: main.js  preload.js
scripts/: build-electron.ps1  build-electron.sh  import_skills.py  push.sh  release.sh
siwu/: __init__.py  __main__.py  cli.py  config.py
siwu/api/: server.py
siwu/api/routes/: agent.py  conversations.py  setup.py
siwu/api/schemas/: models.py
siwu/core/: autonomy.py  cognitive_loop.py  contradiction.py  credibility_chain.py  decision.py  dev_tracer.py  investigation.py  loop_controller.py  perspectives.py  practice.py  practice_classifier.py  practice_harness.py  question_preprocessing.py  rational.py  reflection.py  skill_importer.py  skill_manager.py
siwu/llm/: __init__.py  base.py  claude.py  openai_compatible.py
siwu/memory/: episodic_memory.py  semantic_memory.py  working_memory.py
siwu/tools/: __init__.py  base.py  file_loader.py  filesystem.py  local_retriever.py  pdf_converter.py  search.py  web_fetch.py  web_search.py
siwu/web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
tests/: mock_llm.py  test_clarification.py  test_cognitive_loop.py  test_contradiction.py  test_control_mapping.py  test_credibility_chain.py  test_file_and_project.py  test_full_loop_integration.py  test_practice_integration.py  test_skill_manager.py  test_steering.py
(+12 files in other folders)
