[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "siwu-agent"
version = "0.1.1"
description = "思悟 Agent —— 以毛泽东思想方法论为认知内核的 AI 智能体"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.28.0",
    "openai>=1.35.0",
    "pydantic>=2.7.0",
    "structlog>=24.2.0",
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "tiktoken>=0.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
]
ui = [
    "flet>=0.85.0",
]
storage = [
    "chromadb>=0.5.0",
    "aiosqlite>=0.20.0",
    "sqlalchemy[asyncio]>=2.0.0",
]
search = [
    "networkx>=3.3",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
all = [
    "siwu-agent[web,ui,storage,search]",
]

[project.scripts]
siwu = "siwu.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["siwu"]

[tool.hatch.build.targets.wheel.force-include]
"config.toml.example" = "config.toml.example"
"prompts" = "prompts"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

